--- a/style.css
+++ b/style.css
@@ -64,22 +64,20 @@ global classes
 	border: 2px solid transparent;
 	cursor: pointer;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-	border-radius: var(--radius);
-	margin-bottom: 2rem;
-	background: linear-gradient(45deg, var(--clr-primary), var(--clr-primary));
+	border-radius: 30px;
+	background: #E02C6D;
 	color: var(--clr-white);
-	font-size: 0.9rem;
+	font-size: 1rem;
 	text-transform: capitalize;
-	font-weight: normal;
+	font-weight: 500;
 }
 .section-center{
-	width: 80vw;
+	width: 85vw;
 	margin: 0 auto;
 	max-width: 1170px;
 	min-height: auto;
 	border-radius: 10px;
 	padding: 2rem;
-	margin-top: 1rem;
 }
 .section-title{
 	color: #562EFF;
@@ -141,4 +139,50 @@ Navbar
 ===============
 End of Navbar
 ===============
+*/
+
+/*  
+===============
+Banner Section
+===============
+*/
+.banner-container{
+	display: grid;
+	grid-template-columns: 1fr;
+	row-gap: 1rem;
+}
+.banner-info h1, .banner-info p{
+	margin-bottom: 1rem;
+}
+.btn-prebook i{
+	margin-left: 0.75rem;
+}
+@media screen and (min-width: 768px) {
+  .banner-container{
+		grid-template-columns: 1fr 1fr;
+		row-gap: 0;
+		column-gap: 5rem;
+		align-items: center;
+	}
+	.banner-info{
+		order: -1;
+	}
+}
+@media screen and (min-width: 992px) {
+  .banner-info h1{
+		font-size: 2.25rem;
+	}
+	.banner-info h1, .banner-info p{
+		margin-bottom: 1.5rem;
+	}
+}
+@media screen and (min-width: 1170px) {
+  .banner-info h1{
+		font-size: 2.5rem;
+	}
+}
+/*  
+======================
+End of Banner Section
+======================
 */
