--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ global classes
 	font-weight: 500;
 }
 .section-center{
-	width: 85vw;
+	width: 90vw;
 	margin: 0 auto;
 	max-width: 1170px;
 	min-height: auto;
@@ -185,4 +185,51 @@ Banner Section
 ======================
 End of Banner Section
 ======================
+*/
+
+/*  
+=============
+Company Logo
+=============
+*/
+.logo{
+	width: 4rem;
+	margin-right: 1rem;
+	margin-bottom: 1rem;
+}
+.logo-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .logo{
+		width: 4.5rem;
+		margin-right: 1rem;
+		margin-bottom: 0;
+	}
+	.logo-container{
+		border-top: 1px solid rgb(199, 199, 199);
+		border-bottom: 1px solid rgb(199, 199, 199);
+		padding: 2rem 0;
+		
+	}
+}
+@media screen and (min-width: 992px) {
+  .logo{
+		width: 5.5rem;
+		margin-right: 1.90rem;
+	}
+}
+@media screen and (min-width: 1170px) {
+  .logo{
+		width: 6rem;
+		margin-right: 2.5rem;
+	}
+}
+/*  
+====================
+End of Company Logo
+====================
 */
