--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 Variables
 ===============
 */
-
 :root {
 	--clr-white: #fff;
 	--clr-primary: rgb(248, 104, 88);
@@ -13,7 +12,6 @@ Variables
 	--radius: 0.25rem;
 	--light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 	--dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-	--border: 1px solid red;
 	--clr-background: #E5E5E5;
 }
 
@@ -22,7 +20,6 @@ Variables
 Global Styles
 ===============
 */
-
 *,
 ::after,
 ::before {
@@ -57,7 +54,6 @@ p {
 global classes
 ===============
 */
-
 .btn {
 	padding: 0.75rem 2.5rem;
 	display: inline-block;
@@ -79,10 +75,7 @@ global classes
 	border-radius: 10px;
 	padding: 2rem;
 }
-.section-title{
-	color: #562EFF;
-	padding-bottom: 1rem;
-}
+
 /*  
 ===============
 Navbar
@@ -90,8 +83,6 @@ Navbar
 */
 .navbar{
 	width: 100%;
-	/* background: #562EFF; */
-	/* box-shadow: var(--dark-shadow); */
 }
 .nav-center{
 	width: 100%;
@@ -235,10 +226,28 @@ Company Logo
 		margin-bottom: 0;
 	}
 	.logo-container{
-		border-top: 1px solid rgb(199, 199, 199);
-		border-bottom: 1px solid rgb(199, 199, 199);
 		padding: 2rem 0;
-		
+		position: relative;
+	}
+	.logo-container::before{
+		content: "";
+		width: 100%;
+		height: 1px;
+		background: linear-gradient(to right, rgb(255, 255, 255), rgb(207, 207, 207), rgb(255, 255, 255));
+		position: absolute;
+		top: 0;
+		left: 0;
+		border-radius: 10px;
+	}
+	.logo-container::after{
+		content: "";
+		width: 100%;
+		height: 1px;
+		background: linear-gradient(to right, rgb(255, 255, 255), rgb(207, 207, 207), rgb(255, 255, 255));
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		border-radius: 10px;
 	}
 }
 @media screen and (min-width: 992px) {
@@ -423,7 +432,7 @@ Footer
 }
 .footer-container{
 	color: var(--clr-white);
-	padding: 3rem 0;
+	padding: 2.5rem 0;
 	text-align: center;
 }
 .social-icons a{
